# protobuf-webtransport

./: .gitignore  Cargo.toml  build.rs
browser/: bun.lockb  hello_pb.d.ts  package-lock.json  package.json
browser/lib/proto/: hello_pb.d.ts  publishreply.js  publishrequest.js  updaterequest.js
browser/src/lib/: connection.ts  utils.ts
browser/src/lib/proto/: hello.client.ts  hello.ts
browser/src/lib/stores/: connection.ts
browser/src/routes/: +page.svelte
cert/: generate
protos/: hello.proto
src/: config.rs  index.html  main.rs
thin-client/: index.html
